# mini_template_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
benches/: my_benchmark.rs
docs/: 404.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
docs/rust/: basic.html  custom_modifier.html  feature_falgs.html
docs/tpl/: assign.html  basic_syntax.html  condition.html  include.html  loop.html  modifier.html  modifier_default.html
docs_src/: book.toml
docs_src/src/: SUMMARY.md  introduction.md
docs_src/src/tpl/: assign.md  basic_syntax.md  basics.md  conditional.md  modifier.md  modifier_default.md
examples/: condition.rs  condition.tpl  custom_modifier.rs  custom_modifier.tpl  simple.rs
mini_template/: 1  Cargo.toml  README.md
mini_template/benches/: my_benchmark.rs
mini_template/examples/: condition.rs  condition.tpl  custom_modifier.rs  simple.rs  simple.tpl  value_container.rs  value_container.tpl
mini_template/src/: error.rs  lib.rs  macros.rs  modifier.rs  parser.rs  prelude.rs  renderer.rs  template.pest  template_provider.rs  util.rs  value.rs  value_container.rs  variable_container.rs
mini_template/src/modifier/: error.rs  math.rs  mod.rs  regex.rs  string.rs
mini_template/src/template/: assign.rs  calculated_value.rs  condition.rs  conditional.rs  custom_block.rs  include.rs  loops.rs  mod.rs  modifier.rs  span.rs  statement.rs
mini_template/src/value/: ident.rs  mod.rs  number.rs  storage_method.rs  traits.rs  value_manager.rs  variable_manager.rs
mini_template_derive/: Cargo.toml
mini_template_derive/src/: create_modifier.rs  lib.rs
mini_template_derive/tests/: create_macro.rs
mini_template_macro/: Cargo.toml  README.md
mini_template_macro/src/: create_modifier.rs  derive_value_container.rs  lib.rs
mini_template_macro/tests/: main.rs
mini_template_macro/tests/create_modifier/: argument_is_optional_and_default.rs  argument_is_optional_and_default.stderr  attributs.rs  missing_result.rs  missing_result.stderr  missing_value_argument.rs  missing_value_argument.stderr  optional_argument.rs  optional_value_argument.rs  optional_value_argument.stderr  return_result.rs  unused_arg.rs  value_only.rs
src/: compiler.rs  error.rs  lib.rs  modifier.rs  parser.rs  prelude.rs  renderer.rs  template.pest  value.rs  variable_container.rs
src/template/: assign.rs  calcualted_value.rs  condition.rs  conditional.rs  loops.rs  mod.rs  statement.rs  storage_method.rs  template.rs
