[package]
name = "mini_template"
version = "0.1.0"
authors = ["Julian Alberts <julian.alberts@ewe.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
regex = "1.4.5"
pest = "2.0"
pest_derive = "2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false