[package]
name = "mini_template"
version = "0.1.0"
authors = ["Julian Alberts <julian.alberts@ewe.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10"
log = "0.4"
regex = "1.4"
pest = "2.0"
pest_derive = "2.0"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "my_benchmark"
harness = false