[package]
name = "mini_template"
version = "0.1.0"
authors = ["Julian Alberts <julian.alberts@ewe.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
log = "0.4"
regex = {version = "1.4", optional = true}
pest = "2.0"
pest_derive = "2.0"
mini_template_macro = { path = "../mini_template_macro"}

[dev-dependencies]
criterion = "0.3"

[features]
condition = []
conditional = [ "condition" ]
assign = []
loop = [ "condition", "assign" ]
default = [ "loop", "assign", "conditional", "regex" ]

[profile.release]
debug = true

[[bench]]
name = "my_benchmark"
harness = false