[package]
name = "mini_template_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
proc-macro-crate = "1.1"

[dev-dependencies]
mini_template = { path = "../mini_template" }
